# advent_of_code_2020

./: .pre-commit-config.yaml  .pylintrc  pyproject.toml
.github/workflows/: pythonpackage.yml
solutions/day01/: part1.py
solutions/day02/: part1.py
solutions/day03/: solution.py
solutions/day04/: solution.py
solutions/day05/: solution.py
solutions/day06/: solution.py
solutions/day07/: solution.py
solutions/day08/: solution.py
solutions/day09/: solution.py
solutions/day10/: solution.py
solutions/day11/: solution.py
solutions/day12/: solution.py
solutions/day13/: solution.py
solutions/day14/: solution.py
solutions/day15/: solution.py
