[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "advent-2020"
version = "1.0.0"
description = ""
authors = ["Ravi A-B <raviab1992@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
autoflake = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.8.1"
pytest-xdist = "^1.31.0"
black = "^19.10b0"
flake8 = "^3.8.1"
pre-commit = "^2.4.0"
mypy = "^0.780"
pylint = "^2.6.0"

[tool.poetry.extras]
jupyter = ["jupyter"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.pylint.messages_control]
disable = "C0330, C0326, C0114, C0115, C0116, W1203, I1101"

[tool.pylint.format]
max-line-length = "88"

# Mypy hack until they support pyproject toml properly
[mypy]
ignore_missing_imports = true
